--- a/Changes
+++ b/Changes
@@ -23,3 +23,47 @@ Revision history for Config::ApacheFormat
     - Optimized parsing for a 50% speedup on large files.
 
     - Lowered memory usage.
+
+1.2  Mon Oct 20 10:52:53 PDT 2003
+
+    - Nathan Wiger ported many features from Apache::ConfigFile in an
+      effort to combine the two modules.  These features include:
+
+        o The fix_booleans option, which allows automatic conversion
+          of yes/on/true to 1 and no/off/false to 0
+
+        o The expand_vars option, allowing reuse of previously-defined
+          directives as $directive
+
+        o The setenv_vars option, which will automatically place
+          variables defined via the SetEnv directive into the %ENV
+          hash
+
+        o The hash_directives option, which allows proper handling of
+          directives where the first value is really a key
+          (ex. AddHandler).
+
+        o The duplicate_directives option, which allows the programmer
+          to choose how duplicate directives are handled (by default
+          the last one is kept, allowing subsequent configs to
+          override earlier Includes)
+
+        o Support for multiple blocks with the same name.
+
+        o Support for include directories and multiple include files
+          on a single line
+
+        o The root_directive option, which allows the user to define a
+          root for that config file which is prepended to relative
+          Include paths.
+
+    - Added include_directives option to allow for differently named
+      Include directives.
+
+    - Removed deprecated support for the wrong spelling of
+      inheritance_support as inheritence_support.
+
+    - Fixed bug preventing mixed-case valid_directives and
+      valid_blocks from working.
+
+
